--- a/src/client/app/dashboard/customer/customer.component.html
+++ b/src/client/app/dashboard/customer/customer.component.html
@@ -199,7 +199,7 @@
                             <br><br>
                             <label><b>Street Name</b></label>
                             <input type="text" class="form-control input-underline input-lg" [formControl]="complexForm.controls['address']" [value]="address" [(ngModel)]="address" name="address" required >
-                            <div *ngIf="complexForm.controls['address'].hasError('required') && complexForm.controls['address'].touched" class="alert alert-danger">You must include an address.</div>
+                            <div *ngIf="complexForm.controls['address'].hasError('required') && complexForm.controls['address'].touched" class="alert alert-danger">You must include a street name.</div>
                     </div>
                     <div align="center" class="form-group"> 
                             <br> 
@@ -280,7 +280,7 @@
                             <br><br>
                             <label><b>Street Name</b></label>
                             <input type="text" class="form-control input-underline input-lg" [formControl]="complexForm.controls['address']" [value]="address" [(ngModel)]="address" name="address" required >
-                            <div *ngIf="complexForm.controls['address'].hasError('required') && complexForm.controls['address'].touched" class="alert alert-danger">You must include an address.</div>
+                            <div *ngIf="complexForm.controls['address'].hasError('required') && complexForm.controls['address'].touched" class="alert alert-danger">You must include a street name.</div>
                     </div> 
                     <div align="center" class="form-group"><br>
                             <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitAdd()'>Register</button>                     
