--- a/src/client/app/dashboard/customer/customer.component.html
+++ b/src/client/app/dashboard/customer/customer.component.html
@@ -320,3 +320,24 @@
         </form>
 </div>
 
+<!--confirm-->
+<!-- The Modal -->
+<div id="confirm" class="modal">
+    <span onclick="document.getElementById('confirm').style.display='none'" (click)="clear()" class="close" title="Close Modal">&times;</span>
+        <!-- Modal Content" -->
+        <form [formGroup]="complexForm5" role="form" id="dataadd" class="modal-content animate" >
+	        <div class="form-content">
+                <div class="container" align="center"><br><br> 
+                    <div align="left" class="form-group" [ngClass]="{'has-error':!complexForm5.controls['pass'].valid}">
+                            <label><b>Customer service password</b></label> 
+                            <input type="text" [formControl]="complexForm5.controls['pass']" [(ngModel)]='custservpass' name='custservpass' class="form-control input-underline input-lg" id="custservpass" placeholder="Enter customer service password">
+						    <div *ngIf="complexForm5.controls['pass'].hasError('required') && complexForm5.controls['pass'].touched" class="alert alert-danger">You must enter a Customer ID.</div>                         
+					</div>
+                    <div  class="form-group">
+                            <button [disabled]="!complexForm5.valid"  class="btn btn-primary" (click) ='onSubmitCustServPass($event)'>Reset Password</button>                          
+                    </div>
+                    
+                </div>
+            </div>
+        </form>
+</div>
