--- a/src/client/app/dashboard/custservice/custservice.component.html
+++ b/src/client/app/dashboard/custservice/custservice.component.html
@@ -279,8 +279,30 @@
                             <div *ngIf="complexForm4.controls['reemployeeID'].hasError('pattern') && complexForm4.controls['reemployeeID'].touched" class="alert alert-danger">Employee ID can only consist of numbers.</div>
                     </div>
                     <div  class="form-group">
-                            <button [disabled]="!complexForm4.valid"  class="btn btn-primary" (click) ='onSubmitEmpPass($event)'>Reset Employee Password</button>                          
+                            <button [disabled]="!complexForm4.valid"  class="btn btn-primary" (click) ='onSubmitConfirm($event)'>Reset Employee Password</button>                          
                              <br><br>
+                    </div>
+                    
+                </div>
+            </div>
+        </form>
+</div>
+
+<!--confirm-->
+<!-- The Modal -->
+<div id="confirm" class="modal">
+    <span onclick="document.getElementById('confirm').style.display='none'" (click)="clear()" class="close" title="Close Modal">&times;</span>
+        <!-- Modal Content" -->
+        <form [formGroup]="complexForm5" role="form" id="dataconfirm" class="modal-content animate" >
+	        <div class="form-content">
+                <div class="container" align="center"><br><br> 
+                    <div align="left" class="form-group" [ngClass]="{'has-error':!complexForm5.controls['pass'].valid}">
+                            <label><b>Enter password</b></label> 
+                            <input type="password" [formControl]="complexForm5.controls['pass']" [(ngModel)]='custservpass' name='custservpass' class="form-control input-underline input-lg" id="custservpass" placeholder="Enter password">
+						    <div *ngIf="complexForm5.controls['pass'].hasError('required') && complexForm5.controls['pass'].touched" class="alert alert-danger">You must enter your password.</div>                         
+					</div>
+                    <div  class="form-group">
+                            <button [disabled]="!complexForm5.valid"  class="btn btn-primary" (click) ='onSubmitEmpPass($event)'>Submit</button>                          
                     </div>
                     
                 </div>
